# payment-service/src/main/java/ru/yandex/practicum/payment_service/GlobalExceptionHandler.java
@@ -5,26 +5,43 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import ru.yandex.practicum.payment_service.model.exception.BadRequestException;
+import ru.yandex.practicum.payment_service.model.exception.ForbiddenException;
+import ru.yandex.practicum.payment_service.model.exception.IllegalArgumentException;
+
+import static org.springframework.http.HttpStatus.BAD_REQUEST;
 
 
 @ControllerAdvice
 public class GlobalExceptionHandler {
 
+    private final String ERROR_CODE = "x-error-code";
+    private final String ERROR_MESSAGE = "x-error-message";
+
     // Обработка 400
-    @ExceptionHandler(value = IllegalArgumentException.class)
-    public ResponseEntity<Void> handleIllegalArgumentException(IllegalArgumentException ex) {
-        return getExceptionResponseEntity(ex, HttpStatus.BAD_REQUEST);
+    @ExceptionHandler({IllegalArgumentException.class})
+    public ResponseEntity<?> handleIllegalArgumentException(IllegalArgumentException e) {
+        return errorResponse(e.getErrorCode(), e.getMessage(), BAD_REQUEST);
     }
 
-    @ExceptionHandler(value = BadRequestException.class)
-    public ResponseEntity<Void> handleBadRequestException(BadRequestException ex) {
-        return getExceptionResponseEntity(ex, HttpStatus.BAD_REQUEST);
+    @ExceptionHandler({BadRequestException.class})
+    public ResponseEntity<?> handleBadRequestException(BadRequestException ex) {
+        return errorResponse(ex.getErrorCode(), ex.getMessage(), HttpStatus.BAD_REQUEST);
     }
 
-    private static ResponseEntity<Void> getExceptionResponseEntity(Exception ex, HttpStatus status) {
+    @ExceptionHandler({Exception.class, RuntimeException.class})
+    public ResponseEntity<?> handleAnyException(Exception e) {
+        return errorResponse(e.getClass().getSimpleName(), e.getMessage(), HttpStatus.INTERNAL_SERVER_ERROR);
+    }
+
+    @ExceptionHandler(ForbiddenException.class)
+    public ResponseEntity<?> handleForbiddenException(ForbiddenException e) {
+        return errorResponse(e.getClass().getSimpleName(), e.getMessage(), HttpStatus.FORBIDDEN);
+    }
+
+    private ResponseEntity<Void> errorResponse(String code, String message, HttpStatus status) {
         return ResponseEntity.status(status)
-                .header("x-error-message", ex.getMessage())
+                .header(ERROR_CODE, code)
+                .header(ERROR_MESSAGE, message)
                 .build();
     }
-
 }
